[gd_scene load_steps=7 format=3 uid="uid://e86lmo70nfay"]

[ext_resource type="Script" uid="uid://kllfyyxrrjly" path="res://Scripts/Controlers/control.gd" id="1_crttf"]
[ext_resource type="Texture2D" uid="uid://ddulnw1f258ot" path="res://Assets/Gus Assets/cor.png" id="2_40h0n"]
[ext_resource type="Texture2D" uid="uid://d1s7as1giyoeu" path="res://Assets/Gus Assets/capa_copiar.jpg" id="2_crttf"]

[sub_resource type="LabelSettings" id="LabelSettings_62e2m"]
font_size = 64
outline_size = 6
outline_color = Color(1, 1, 0.596078, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y672a"]
outline_size = 3
outline_color = Color(0.839216, 0.513726, 0.0627451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_crttf"]
outline_size = 2
outline_color = Color(0.840763, 0.515346, 0.0636857, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crttf")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 128.0
offset_right = 16.0
offset_bottom = 151.0
grow_horizontal = 2
text = "LIGHT THE WAY"
label_settings = SubResource("LabelSettings_62e2m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -44.0
offset_right = 97.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "INICIAR JOGO"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SAIR DO JOGO"

[node name="Creditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CRÉDITOS"

[node name="creditos" type="Sprite2D" parent="VBoxContainer/Creditos"]
position = Vector2(113.5, -60)
scale = Vector2(7.88356, 4.83582)
texture = ExtResource("2_40h0n")

[node name="Label" type="Label" parent="VBoxContainer/Creditos/creditos"]
offset_left = -62.5986
offset_top = -49.2161
offset_right = 358.401
offset_bottom = 103.784
scale = Vector2(0.299809, 0.569877)
text = "DESIGN, QA e BALANCEAMENTO - André Teixeira

PROGRAMAÇÃO e IMPLEMENTAÇÃO - Jeferson Moreira

ARTE - Gustavo Resende"
label_settings = SubResource("LabelSettings_y672a")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="close" type="Button" parent="VBoxContainer/Creditos/creditos"]
offset_left = -71.8584
offset_top = -65.5525
offset_right = -54.8584
offset_bottom = -34.5525
scale = Vector2(0.832563, 0.545062)
text = "x"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 323.5)
scale = Vector2(0.6, 0.59537)
texture = ExtResource("2_crttf")

[node name="Creditos" type="Label" parent="Sprite2D"]
offset_left = 645.0
offset_top = 350.202
offset_right = 821.0
offset_bottom = 453.202
text = "Um jogo por:
André Tavares
Jeferson Moreira
Gustavo Resende"
label_settings = SubResource("LabelSettings_crttf")
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos/creditos/close" to="." method="_on_close_pressed"]
